--- a/Sources/Nested/related.tex
+++ b/Sources/Nested/related.tex
@@ -82,7 +82,7 @@ logical relations based method for proving coherence.
 The BCD type system was first introduced by Barendregt et al.~\cite{Barendregt_1983}. It is
 derived from a filter lambda model in order to characterize exactly the strongly
 normalizing terms. The BCD type system features a powerful subtyping relation,
-which serves as a base for our subtyping relation. Bessai el at.~\cite{DBLP:journals/corr/BessaiDDCd15}
+which serves as a base for our subtyping relation. Bessai et al.~\cite{DBLP:journals/corr/BessaiDDCd15}
 showed how to type classes and mixins in a BCD-style record calculus with Bracha-Cook's merge operator~\cite{bracha1990mixin}.
 Their merge can only operate on records, and they only study a type assignment system.
 The decidability of BCD subtyping has been shown in several
