--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -2,6 +2,10 @@
 \chapter{First-Class Traits}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\input{Sources/Traits/introduction.tex}
+\input{Sources/Traits/overview.tex}
+\input{Sources/Traits/traits.tex}
+% \input{Sources/Traits/typesystem.mng}
 
 
 %%% Local Variables:
