--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -42,8 +42,15 @@
 \newcommand{\name}{\textsf{NeColus}\xspace}
 \newcommand{\namee}{$\lambda_{i}^{+}$\xspace}
 \newcommand\oname{$\lambda_{i}$\xspace}
-\newcommand\fname{$F_{i}$\xspace}
+\newcommand\fname{$\mathsf{F}_{i}$\xspace}
 \newcommand\tname{$\lambda_{c}$\xspace}
+
+\newcommand\sedel{\textsf{SEDEL}\xspace}
+
+\newcommand{\cmark}{\ding{51}}%
+\newcommand{\xmark}{\ding{55}}%
+
+
 
 % Logical equivalence related macros
 \newcommand{\valR}[2]{\mathcal{V}\bra{#1 ; #2}}
