--- a/Sources/Conclusion.tex
+++ b/Sources/Conclusion.tex
@@ -4,6 +4,12 @@
 
 
 
+\section{On Categorical Semantics}
+
+
+
+\section{On Implicit Polymorphism}
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../Thesis"
