--- a/Sources/Nested/introduction.tex
+++ b/Sources/Nested/introduction.tex
@@ -35,7 +35,7 @@ A far more common form of intersection types are the so-called \emph{refinement
 restrict the formation of intersection types so that the two types in an
 intersection are refinements of the same simple (unrefined) type. Refinement
 intersection increases only the expressiveness of types and not of terms. 
-For this reason, Dunfield~\cite{dunfield2014elaborating} argues that refinement
+For this reason, \citet{dunfield2014elaborating} argues that refinement
 intersection is unsuited for encoding various useful language features
 that require the merge operator (or an equivalent term-level operator).
 
@@ -70,7 +70,7 @@ be used to model powerful forms of extensible records~\cite{}.
 
 Disjoint intersection types have great potential to serve as a foundation for
 powerful, flexible and yet type-safe OO languages that are easy to reason
-about. As shown by Alpuim et al.~\cite{alpuimdisjoint}, calculi with disjoint intersection
+about. As shown by \citet{alpuimdisjoint}, calculi with disjoint intersection
 types are very
 expressive and can be used to statically type-check JavaScript-style programs
 using mixins. Yet they retain both type safety and coherence. While
