--- a/Thesis.bib
+++ b/Thesis.bib
@@ -469,7 +469,7 @@ year		= {2007},
 
 @inproceedings{wang2016expression,
   title={The expression problem, trivially!},
-  author={Wang, Yanlin and Oliveira, Bruno C d S},
+  author={Wang, Yanlin and Oliveira, Bruno C. d. S.},
   booktitle={Proceedings of the 15th International Conference on Modularity},
   year={2016},
 }
