--- a/packages.tex
+++ b/packages.tex
@@ -64,7 +64,7 @@
 }
 
 \lstdefinelanguage{sedel}{
-  keywords={Int, String, this, trait, inherits, super, type, Trait, override, self, new, if, then, else, let, in},
+  keywords={Int, String, this, inherits, super, type, Trait, override, new, if, then, else, let, in},
   identifierstyle=\color{black},
   morecomment=[l]{--},
   morecomment=[l]{//},
