--- a/Sources/Nested/coherence.tex
+++ b/Sources/Nested/coherence.tex
@@ -64,7 +64,7 @@ term of type $[[nat]]$. The following two definitions capture the notion of
 
 \begin{definition}[Kleene Equality]
   Two complete programs, $[[e]]$ and $[[e']]$, are Kleene equal, written
-  $\kleq{[[e]]}{[[e']]}$, iff there exists $i$ such that $[[e -->> i]]$ and $[[e' -->> i]]$.
+  $\kleq{[[e]]}{[[e']]}$, iff there exists $i$ such that $[[e -->> ii]]$ and $[[e' -->> ii]]$.
 \end{definition}
 
 \begin{definition}[\tname Contextual Equivalence] \label{def:cxtx} \leavevmode
