--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -5,7 +5,7 @@
 \input{Sources/Traits/introduction.tex}
 \input{Sources/Traits/overview.tex}
 \input{Sources/Traits/traits.tex}
-% \input{Sources/Traits/typesystem.mng}
+\input{Sources/Traits/typesystem.mng}
 
 
 %%% Local Variables:
