--- a/Thesis.bib
+++ b/Thesis.bib
@@ -522,7 +522,7 @@ year		= {2007},
 
 @article{Henglein_1994,
 	year = 1994,
-	month = {jun},
+	month = {6},
 	publisher = {Elsevier {BV}},
 	volume = {22},
 	number = {3},
@@ -1022,7 +1022,7 @@ year		= {2007},
   interhash = {8212a5bb4b7ac3137534f10d599cb526},
   intrahash = {8d67e2ebf933f3b6f684fcfb1f53b020},
   keywords = {JavaScript spec specification},
-  month = {June},
+  month = {6},
   timestamp = {2015-08-28T15:37:30.000+0200},
   title = {{ECMAScript 2015 Language Specification}},
   url = {http://www.ecma-international.org/ecma-262/6.0/ECMA-262.pdf},
@@ -1122,7 +1122,7 @@ url = {https://racket-lang.org/}
 
 @article{Ducasse_2006,
 	year = 2006,
-	month = {mar},
+	month = {3},
 	publisher = {Association for Computing Machinery ({ACM})},
 	volume = {28},
 	number = {2},
