--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -6,6 +6,9 @@
 \input{Sources/Traits/overview.tex}
 \input{Sources/Traits/traits.tex}
 \input{Sources/Traits/typesystem.mng}
+\input{Sources/Traits/applications.tex}
+\input{Sources/Traits/related.tex}
+\input{Sources/Traits/conclusion.tex}
 
 
 %%% Local Variables:
