--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1231,7 +1231,7 @@ keywords = "Featherweight Java, Trait, Type system"
 
 @article{Rossberg_2013,
 	year = 2013,
-	month = {apr},
+	month = {4},
 	publisher = {Association for Computing Machinery ({ACM})},
 	volume = {35},
 	number = {1},
