--- a/Thesis.tex
+++ b/Thesis.tex
@@ -129,10 +129,22 @@
 
   \include{Sources/Introduction}
   \include{Sources/Background}
+
+
+  \part{Type Systems}
+
   \include{Sources/Nested}
   \include{Sources/Polymorphism}
+
+  \part{Coherence}
+
+  \include{Sources/Coherence}
+
+
+  \part{Applications}
+
   \include{Sources/Traits}
-  % \include{Sources/Category}
+
   \include{Sources/Related}
   \include{Sources/Conclusion}
 
