--- a/Sources/Coherence.tex
+++ b/Sources/Coherence.tex
@@ -1,7 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{On Categorical Semantics}
+\chapter{Coherence}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\input{Sources/Coherence/coherence_simple.mng}
 
 
 %%% Local Variables:
