--- a/Sources/Background.tex
+++ b/Sources/Background.tex
@@ -5,6 +5,33 @@
 
 
 
+\section{(Disjoint) Intersection Types}
+
+talk about Dunfield's system and lambda i
+
+\section{BCD Type System}
+
+talk about intersection types as capturing  strongly normalizing terms, BCD subtyping
+
+\section{Disjoint Polymorphism}
+
+talk about Fi
+
+\section{Coherence}
+
+Talk about previous approach
+
+
+\section{Nested Composition and Family Polymorphism}
+
+
+talk about expression problem
+
+\section{Mixins and Traits}
+
+talk about the connection with mixins/traits in OO.
+
+
 
 %%% Local Variables:
 %%% mode: latex
