--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -17,6 +17,14 @@
 
 Here is the start\index{start} of my document.
 
+
+
+
+\section{Structure}
+
+structure of the thesis
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../Thesis"
