--- a/Sources/Related.tex
+++ b/Sources/Related.tex
@@ -4,6 +4,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+\input{Sources/Traits/related.tex}
+
+\input{Sources/Nested/related.tex}
+
 
 %%% Local Variables:
 %%% mode: latex
