--- a/Sources/Nested.tex
+++ b/Sources/Nested.tex
@@ -8,8 +8,7 @@
 \input{Sources/Nested/overview.tex}
 \input{Sources/Nested/typesystem.mng}
 \input{Sources/Nested/algorithm.mng}
-\input{Sources/Nested/related.tex}
-\input{Sources/Nested/conclusion.tex}
+% \input{Sources/Nested/conclusion.tex}
 
 
 
