--- a/Sources/Coherence/coherence_simple.tex
+++ b/Sources/Coherence/coherence_simple.tex
@@ -1,6 +1,8 @@
 
-\section{Coherence for \name}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Coherence for \namee}
 \label{sec:cohe}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 This section constructs logical relations to
 establish the coherence of \name. Finding a
@@ -11,8 +13,7 @@ construction of logical (equivalence) relations tailored to this
 definition, and the connection between logical equivalence and coherence.
 
 
-
-\subsection{In Search of Coherence}
+\section{In Search of Coherence}
 
 In \oname the definition of coherence is based on
 $\alpha$-equivalence. More specifically, their coherence property states that
@@ -143,7 +144,7 @@ in the following theorem:
 expressions in the inference mode. The rest of the section is devoted to proving
 that Theorem~\ref{thm:coherence} holds.
 
-\subsection{Logical Relations}
+\section{Logical Relations}
 
 Intuitive as Definition~\ref{def:cxtx2} may seem, it is generally very hard to prove
 contextual equivalence directly, since it involves quantification over
@@ -277,7 +278,7 @@ makes them related:
 For succinctness, we write $[[gg |- e1 == e2 : T]]$ to mean $[[gg ; gg |- e1 == e2 : T ; T]]$.
 
 
-\subsection{Establishing Coherence}
+\section{Establishing Coherence}
 
 With all the machinery in place, we are now ready to prove Theorem~\ref{thm:coherence}. But we need
 several lemmas to set the stage.
@@ -370,7 +371,7 @@ Armed with Theorem~\ref{thm:co-log} and Theorem~\ref{thm:log-sound}, coherence f
   Immediate from Theorem~\ref{thm:co-log} and Theorem~\ref{thm:log-sound}.
 \end{proof}
 
-\subsection{Some Interesting Corollaries}
+\section{Some Interesting Corollaries}
 
 To showcase the strength of the new proof method, we can derive some
 interesting corollaries. For the most part, they are direct consequences of
