--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -6,7 +6,7 @@
 \input{Sources/Traits/overview.tex}
 \input{Sources/Traits/traits.tex}
 \input{Sources/Traits/typesystem.mng}
-\input{Sources/Traits/applications.tex}
+% \input{Sources/Traits/applications.tex}
 % \input{Sources/Traits/conclusion.tex}
 
 
