--- a/Thesis.tex
+++ b/Thesis.tex
@@ -141,9 +141,14 @@
   \include{Sources/Coherence}
 
 
-  \part{Applications}
+  \part{Traits}
 
   \include{Sources/Traits}
+
+  \part{Applications}
+
+  \include{Sources/Applications}
+
 
   \include{Sources/Related}
   \include{Sources/Conclusion}
