--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -43,6 +43,7 @@
 \newcommand{\namee}{$\lambda_{i}^{+}$\xspace}
 \newcommand\oname{$\lambda_{i}$\xspace}
 \newcommand\fname{$\mathsf{F}_{i}$\xspace}
+\newcommand\fnamee{$\mathsf{F}_{i}^{+}$\xspace}
 \newcommand\tname{$\lambda_{c}$\xspace}
 
 \newcommand\sedel{\textsf{SEDEL}\xspace}
