--- a/Sources/Coherence.tex
+++ b/Sources/Coherence.tex
@@ -1,8 +1,6 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Coherence}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input{Sources/Coherence/coherence_simple.mng}
+\input{Sources/Coherence/coherence_poly.mng}
 
 
 %%% Local Variables:
