--- a/Sources/Nested/typesystem.tex
+++ b/Sources/Nested/typesystem.tex
@@ -219,7 +219,7 @@ shown in \cref{fig:co}.
 
 \begin{figure}[t]
   \centering
-  \drules[cotyp]{$[[c |- T1 tri T2]]$}{Coercion typing}{refl, trans, top, topArr, topRcd, arr, pair, projl, projr, rcd, distRcd, distArr}
+  \drules[ct]{$[[c |- T1 tri T2]]$}{Coercion typing}{refl, trans, top, topArr, topRcd, arr, pair, projl, projr, rcd, distRcd, distArr}
   \caption{Coercion typing}
   \label{fig:co}
 \end{figure}
