--- a/Sources/Polymorphism.tex
+++ b/Sources/Polymorphism.tex
@@ -5,6 +5,16 @@
 
 
 
+\section{Overview}
+
+
+\input{Sources/Poly/typesystem.mng}
+
+\input{Sources/Poly/disjoint.mng}
+
+\input{Sources/Poly/elaboration.mng}
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../Thesis"
