--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -44,7 +44,10 @@
 \newcommand\oname{$\lambda_{i}$\xspace}
 \newcommand\fname{$\mathsf{F}_{i}$\xspace}
 \newcommand\fnamee{$\mathsf{F}_{i}^{+}$\xspace}
-\newcommand\tname{$\lambda_{c}$\xspace}
+\newcommand\tname{$\lambda_{co}$\xspace}
+\newcommand\tnamee{$\mathsf{F}_{co}$\xspace}
+
+
 
 \newcommand\sedel{\textsf{SEDEL}\xspace}
 
